stylesheets/stylesheet.css
html, body {
    height: 100%;
    background-color: black;
    color: white
}

@font-face {
    font-family: "HelveticaBold";
    src: url("../resources/Helvetica-Bold-Font.ttf")
}

.vertical-center {
    height: 100%;
    min-height: 100%;
    box-sizing: border-box;
    display: flex;
    align-items: center;
    overflow-x: hidden;
    overflow-y: hidden;
}

@media screen and (max-width: 500px) {
    .navitem-header[data-abbr]::after { 
        content: attr(data-abbr); 
    }

    .navitem-header > span { display: none; }
}

.navitem {
    font-family: HelveticaBold;
    border-radius: 0.5rem;
    padding: 0.5rem 1.25rem 0.5rem 1rem;
    cursor: pointer;
    width: fit-content;
    transition: 0.5s;    
}

.navitem:hover {
    background-color: white;
    color: black;
}

.navitem-header {
    background-image: linear-gradient(90deg, #ff6469, #ffd36b, #aeffce, #ffd36b, #ff6469);
    background-size: 200%;
    background-clip: text;

    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-background-clip: text;
    -moz-text-fill-color: transparent; 
    -ms-background-clip: text;
    -ms-text-fill-color: transparent;

    background-position: 0em top;
    animation: scrollbg linear 9s infinite;
}

@keyframes scrollbg {
    from { background-position: 0em top; }
    to { background-position: 17em top; }
}

.navfade1 {
    animation: fadein ease 2s;
    animation-delay: 0.1s;
    animation-fill-mode: both;
}

.navfade2 {
    animation: fadein ease 2s;
    animation-delay: 0.5s;
    animation-fill-mode: both;
}

.navfade3 {
    animation: fadein ease 2s;
    animation-delay: 0.9s;
    animation-fill-mode: both;
}

@keyframes fadein {
    from { opacity: 0; }
    to { opacity: 1; }
}

